fixed images not fitting to container issue

--- a/Quizzes/quiz.css
+++ b/Quizzes/quiz.css
@@ -90,6 +90,7 @@
 .quiz_container {
   position: relative;
   text-align: center;
+  height: 100%;
 }
 
 .text_container
